<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/twitterLogin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/actionTwitterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/accent"
            android:padding="@dimen/text_margin"
            android:text="@string/social_login"
            android:textColor="@color/cardview_light_background" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/twitterProfile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/twitterUserPicture"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/twitterUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/twitterUserPicture"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/card_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/twitter_username"
            android:textColor="@color/primary_text" />

        <Button
            android:id="@+id/actionTwitterLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/accent"
            android:text="@string/social_logout"
            android:textColor="@color/cardview_light_background" />
    </RelativeLayout>

</LinearLayout>